--- a/index.html
+++ b/index.html
@@ -206,10 +206,11 @@
             <i class="bi bi-github"></i>
             <a href="https://github.com/Helkiiasok">GitHub</a>
         </div>
-        <p class="my-5 text-center">© Copyright 2025. Produzido por MendigoGames</p>
+        <p class="my-5 text-center">© Copyright 2025. Produzido por GuilhermeHelk</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
